<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.effective.common</groupId>
    <artifactId>effective-common-utils</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>effective-common-utils</name>
    <url>http://maven.apache.org</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <modules>
        <!--
        <module>effective-bookstore</module>
        <module>effective-concurrent</module>
        <module>effective-xml</module>
        <module>effective-zookeeper</module>
        <module>effective-zeromq</module>
        <module>effective-protobuf</module>
        <module>effective-mybatis-redis</module>
        <module>effective-druid</module>
        <module>effective-messagePack</module>
        <module>effective-osgi</module>
        <module>effective-arithmetic</module>
        <module>effective-shell</module>
        <module>effective-frequency</module>
        <module>mybatis-plus-sample-crud</module>
        <module>effective-junit5</module>
        <module>effective-akka</module>
        -->
        <module>effective-etcd</module>
        <module>effective-disruptor</module>
        <module>effective-lambda</module>
        <module>effective-annotation</module>
        <module>effective-flow-control</module>
        <module>effective-flux</module>
        <module>effective-netty</module>
        <!--
        <module>effective-httpclient</module>
        <module>effective-springboot</module>
        <module>effective-base</module>
        <module>effective-cache</module>
        <module>effective-pom</module>
        -->
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
          <release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
